--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
-  "name": "structor-templates",
-  "version": "1.0.0",
-  "description": "Material-UI template for structor",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "author": {
+    "name": "Fi1osof"
   },
+  "bugs": {
+    "url": "https://github.com/Fi1osof/structor-templates/issues"
+  },
+  "bundleDependencies": false,
+  "deprecated": false,
+  "description": "Material-UI template for structor",
+  "homepage": "https://github.com/Fi1osof/structor-templates#readme",
   "keywords": [
     "structor",
     "material-ui",
     "templates"
   ],
-  "author": "Fi1osof",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "main": "index.js",
+  "name": "structor-templates",
+  "repository": {
+    "type": "git",
+    "url": "git+https://Fi1osof@github.com/Fi1osof/structor-templates.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "version": "1.1.0"
 }
