--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "author": {
-    "name": "Fi1osof"
-  },
+  "author": "Fi1osof",
   "bugs": {
     "url": "https://github.com/Fi1osof/structor-templates/issues"
   },
@@ -24,5 +22,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.1.0"
+  "version": "1.1.1"
 }
