--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "author": "Fi1osof",
+  "author": {
+    "name": "Fi1osof"
+  },
   "bugs": {
     "url": "https://github.com/Fi1osof/structor-templates/issues"
   },
@@ -22,5 +24,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.1.1"
+  "version": "1.1.2"
 }
